correct version of tg-gif-bot tag

--- a/tg-youtubegif.yml
+++ b/tg-youtubegif.yml
@@ -6,7 +6,7 @@ functions:
   telegram-gif-bot:
     lang: node
     handler: ./telegram-gif-bot
-    image: ems5311/telegram-gif-bot:latest
+    image: ems5311/telegram-gif-bot:0.1
     environment:
       read_timeout: 65
       write_timeout: 65
@@ -22,7 +22,7 @@ functions:
   youtube-dl:
     lang: Dockerfile
     handler: ./youtube-dl
-    image: ems5311/youtube-dl:0.1
+    image: ems5311/youtube-dl:latest
     environment:
       read_timeout: 65
       write_timeout: 65
