--- a/telegram-gif-bot/package.json
+++ b/telegram-gif-bot/package.json
@@ -11,6 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "node-telegram-bot-api": "^0.28.0",
-    "request": "^2.82.0",
+    "request": "^2.82.0"
   }
 }
