--- a/youtube-dl/Dockerfile
+++ b/youtube-dl/Dockerfile
@@ -1,8 +1,18 @@
-FROM crosbymichael/youtubedl
+
+#FROM arm64v8/python
+FROM armhf/python:2.7-alpine
+
+RUN pip install --upgrade youtube_dl && mkdir /download
+WORKDIR /download
+#ENTRYPOINT ["youtube-dl"]
+#CMD ["--help"]
+
 ENTRYPOINT []
 
-ADD https://github.com/alexellis/faas/releases/download/0.5.8-alpha/fwatchdog /usr/bin
-RUN chmod +x /usr/bin/fwatchdog
+#ADD https://github.com/openfaas/faas/releases/download/0.6.7/fwatchdog-arm64 /usr/bin
+RUN apk --no-cache add curl \
+ && curl -LS https://github.com/openfaas/faas/releases/download/0.6.7/fwatchdog-armhf > /usr/bin/fwatchdog \
+ && chmod +x /usr/bin/fwatchdog
 COPY entry.sh   .
 RUN chmod +x entry.sh
 ENV fprocess="./entry.sh"
