--- a/gif-maker/Dockerfile
+++ b/gif-maker/Dockerfile
@@ -1,10 +1,10 @@
 FROM alpine:3.6
 
-RUN apk --no-cache add ffmpeg gifsicle curl jq \
-   && curl -LS https://github.com/alexellis/faas/releases/download/0.5.6-alpha/fwatchdog > /usr/bin/fwatchdog \
+RUN apk --no-cache add ffmpeg gifsicle curl \
+   && curl -LS https://github.com/openfaas/faas/releases/download/0.6.7/fwatchdog-armhf > /usr/bin/fwatchdog \
    && chmod +x /usr/bin/fwatchdog \
    && apk del curl
 WORKDIR /root/
 COPY entry.sh   .
-ENV fprocess="./entry.sh"
+ENV fprocess="sh ./entry.sh"
 CMD ["fwatchdog"]
