--- a/tg-youtubegif.yml
+++ b/tg-youtubegif.yml
@@ -11,9 +11,9 @@ functions:
   gif-maker:
     lang: Dockerfile
     handler: ./gif-maker
-    image: ems5311/gif-maker:0.1
+    image: ems5311/gif-maker:arm
 
   youtube-dl:
     lang: Dockerfile
     handler: ./youtube-dl
-    image: ems5311/youtube-dl:latest
+    image: ems5311/youtube-dl:arm
