simplify node code
Signed-off-by: Eric Stoekl <ems5311@gmail.com>

--- a/tg-youtubegif.yml
+++ b/tg-youtubegif.yml
@@ -6,16 +6,16 @@ functions:
   telegram-gif-bot:
     lang: node
     handler: ./telegram-gif-bot
-    image: ems5311/telegram-gif-bot:0.2
+    image: ems5311/telegram-gif-bot:0.3
     environment:
       write_timeout: 65
       read_timeout: 65
       write_debug: true
 
   gif-maker:
-    lang: Dockerfile
+    lang: dockerfile
     handler: ./gif-maker
-    image: ems5311/gif-maker:0.2
+    image: ems5311/gif-maker:latest
     environment:
       write_timeout: 65
       read_timeout: 65
@@ -23,7 +23,7 @@ functions:
   youtube-dl:
     lang: Dockerfile
     handler: ./youtube-dl
-    image: ems5311/youtube-dl:0.2
+    image: ems5311/youtube-dl:latest
     environment:
       write_timeout: 65
       read_timeout: 65
